--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
-.qv-mode-edit:not(.ssa-in-edit) .sheet-grid :not(.library-dragging)#grid .qv-gridcell.active {
+/* .qv-mode-edit:not(.ssa-in-edit) .sheet-grid :not(.library-dragging)#grid .qv-gridcell.active {
 	border: none;
-}
+} */
 
 .dev-suite__selected {
 	border: 2px solid #2294f2 !important;
