hiding default object resize handles

--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,10 @@
 	background: none;
 }
 
+#grid .qv-gridcell .qv-gridresize-point {
+	display: none;
+}
+
 .drag-and-drop-canvas {
 	display: none;
 }
